# Zettlecast

./: .antigravity.md  .env.example  .gitignore  AGENTS.md  NEMO_TROUBLESHOOTING.md  README.md  WARP.md  pyproject.toml  run.sh  setup.ps1  setup.sh  test_whisper.py  zc
docker/: Dockerfile.nemo  docker-compose.yml  requirements-nemo.txt
examples/: nemo_transcription_example.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/graph/: page.tsx
frontend/app/images/: page.tsx
frontend/app/notes/: page.tsx
frontend/app/podcasts/: page.tsx
frontend/app/search/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: Graph.tsx  MarkdownContent.tsx  Sidebar.tsx
frontend/lib/: api.ts  types.ts  utils.ts
scripts/: patch_nemo_Darwin.py  patch_nemo_windows.py  patch_numpy2.py
src/zettlecast/: __init__.py  chunker.py  cli.py  config.py  db.py  enricher.py  identity.py  linker.py  main.py  models.py  parser.py  search.py
src/zettlecast/image/: __init__.py  formatter.py  image_parser.py  models.py  queue.py  vision_backend.py
src/zettlecast/podcast/: __init__.py  aligner.py  base_transcriber.py  chunker.py  container_transcriber.py  diarization_mixin.py  enhancer.py  formatter.py  mac_transcriber.py  mlx_whisper_transcriber.py  models.py  nemo_transcriber.py  rss.py  (+6 more)
tests/: conftest.py  test_aligner.py  test_chunker.py  test_enhancer.py  test_enricher.py  test_identity.py  test_linker.py  test_mac_transcriber.py  test_parser_fallback.py  test_transcriber_factory.py
tests/integration/: test_container.py  test_mac_pipeline.py
(+3 files in other folders)
